--- a/data/easiestgall.json
+++ b/data/easiestgall.json
@@ -1,12 +1,13 @@
 {
-    "id": 57436521,
-    "name": "SAMPLELEVEL2",
-    "author": "Solo_Creator",
+    "id": 129612142,
+    "name": "easiest gall",
+    "author": "Panda",
     "creators": [],
-    "verifier": "Solo_Creator",
+    "verifier": "Panda",
     "verification": "https://www.youtube.com/watch?v=ISTl28wKSXc",
     "percentToQualify": "100",
     "password": "Free To Copy",
     "records": [
     ]
+
 }
