--- a/data/easiestgall.json
+++ b/data/easiestgall.json
@@ -3,7 +3,7 @@
     "name": "easiest gall",
     "author": "Panda",
     "creators": [],
-    "verifier": "Panda",
+    "verifier": "",
     "verification": "https://www.youtube.com/watch?v=ISTl28wKSXc",
     "percentToQualify": "100",
     "password": "Free To Copy",
@@ -11,3 +11,4 @@
     ]
 
 }
+
