--- a/data/easiestgall.json
+++ b/data/easiestgall.json
@@ -4,12 +4,13 @@
     "author": "Panda",
     "creators": [],
     "verification": "https://www.youtube.com/watch?v=26PISxt29k0",
-    "percentToQualify": "100",
+    "percentToQualify": "WR",
     "password": "Free To Copy",
     "records": [
     ]
 
 }
+
 
 
 
